@@ -17,7 +17,6 @@
 (env-load "stage4/keyword-copiers.lisp")
 (env-load "stage4/maptree.lisp")
 (env-load "stage4/pad.lisp")
-(env-load "stage4/permutate.lisp")
 (env-load "stage4/remove.lisp")
 (env-load "stage4/repeat.lisp")
 (env-load "stage4/replace.lisp")
